--- a/Batch-29/myapp-ts/package.json
+++ b/Batch-29/myapp-ts/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.3.1",
+    "axios": "^1.3.4",
     "framer-motion": "^10.6.0",
     "global": "^4.4.0",
     "react": "^18.2.0",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.9.0"
   }
 }
