--- a/2.Examples/examples-reactypescript/package.json
+++ b/2.Examples/examples-reactypescript/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
