--- a/Batch-33/mini-product-vite/package.json
+++ b/Batch-33/mini-product-vite/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@rollup/plugin-inject": "^5.0.3",
+    "@tanstack/react-query": "^4.32.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "swiper": "^10.1.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
