--- a/2.Examples/example-react-query/package.json
+++ b/2.Examples/example-react-query/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
     "add": "^2.0.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
