--- a/Batch-34/react-vite-ts/package.json
+++ b/Batch-34/react-vite-ts/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.15",
+    "clsx": "^2.0.0",
     "numeral": "^2.0.6",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
