--- a/Batch-34/react-vite-ts/package.json
+++ b/Batch-34/react-vite-ts/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "autoprefixer": "^10.4.15",
+    "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "numeral": "^2.0.6",
     "postcss": "^8.4.28",
