--- a/Batch-34/react-vite-ts/package.json
+++ b/Batch-34/react-vite-ts/package.json
@@ -24,7 +24,8 @@
     "swiper": "^10.2.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.34.1",
