--- a/Batch-34/react-vite-ts/package.json
+++ b/Batch-34/react-vite-ts/package.json
@@ -19,8 +19,11 @@
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.3.1",
     "swiper": "^10.2.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
@@ -32,6 +35,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
