--- a/Batch-34/react-vite-ts/package.json
+++ b/Batch-34/react-vite-ts/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.35.3",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.1.2",
     "swiper": "^10.2.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
