--- a/Batch-36/react-vite/package.json
+++ b/Batch-36/react-vite/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
