--- a/Batch-36/react-vite/package.json
+++ b/Batch-36/react-vite/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "swiper": "^11.0.5",
     "yup": "^1.3.2",
     "zustand": "^4.4.7"
   },
