--- a/Batch-37/typescrip-basic/package.json
+++ b/Batch-37/typescrip-basic/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "typescript": "^5.3.2"
   }
