--- a/Batch-37/typescrip-basic/tsconfig.json
+++ b/Batch-37/typescrip-basic/tsconfig.json
@@ -2,10 +2,11 @@
   
     "compilerOptions": {
         "target": "es2016",
-        "module": "commonjs",
+        "module": "ESNext",
         "strict": true,
+        "allowJs": true,
         "esModuleInterop": true,
-        "skipLibCheck": true,
+        "skipLibCheck": false,
         "forceConsistentCasingInFileNames": true
   }
 }
