--- a/Batch-37/react-vite/package.json
+++ b/Batch-37/react-vite/package.json
@@ -18,7 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
