--- a/Batch-37/react-vite/package.json
+++ b/Batch-37/react-vite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.14.2",
+    "antd": "^5.12.5",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
