--- a/Batch-38/react-vite/package.json
+++ b/Batch-38/react-vite/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
