--- a/Batch-38/react-vite/package.json
+++ b/Batch-38/react-vite/package.json
@@ -21,6 +21,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "swiper": "^11.0.5",
     "yup": "^1.3.3",
     "zustand": "^4.5.0"
   },
