--- a/Batch-39/react-vite/package.json
+++ b/Batch-39/react-vite/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "antd": "^5.18.0",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
