--- a/Batch-39/react-vite/package.json
+++ b/Batch-39/react-vite/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@tanstack/react-query": "^5.40.1",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
