--- a/Batch-39/react-vite/package.json
+++ b/Batch-39/react-vite/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
