--- a/Batch-186-188/react-vite/package.json
+++ b/Batch-186-188/react-vite/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
