--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
+    "yup": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
