--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
+    "react-router": "^7.1.0",
     "yup": "^1.6.0"
   },
   "devDependencies": {
