--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@hookform/resolvers": "^3.9.1",
+    "antd": "^5.22.6",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
