--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -13,11 +13,13 @@
     "@ant-design/icons": "^5.5.2",
     "@hookform/resolvers": "^3.9.1",
     "antd": "^5.22.6",
+    "axios": "^1.7.9",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.0",
     "yup": "^1.6.0"
   },
