--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@hookform/resolvers": "^3.9.1",
+    "@tanstack/react-query": "^5.62.10",
     "antd": "^5.22.6",
     "axios": "^1.7.9",
     "lucide-react": "^0.468.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tanstack/eslint-plugin-query": "^5.62.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
