--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.54.1",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.0",
-    "yup": "^1.6.0"
+    "yup": "^1.6.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
