--- a/Batch-40/react-v19-vite/package.json
+++ b/Batch-40/react-v19-vite/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.62.10",
     "antd": "^5.22.6",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,12 +25,14 @@
     "react-hook-form": "^7.54.1",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.0",
+    "tailwind-merge": "^2.6.0",
     "yup": "^1.6.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@tanstack/eslint-plugin-query": "^5.62.9",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -38,6 +43,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
