--- a/Batch-193/react-vite-typescript/package.json
+++ b/Batch-193/react-vite-typescript/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.80.10",
     "axios": "^1.10.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
