--- a/Batch-193/react-vite-typescript/package.json
+++ b/Batch-193/react-vite-typescript/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.6.2",
     "tailwindcss": "^4.1.8",
     "yup": "^1.6.1"
   },
