--- a/Batch-193/react-vite-typescript/package.json
+++ b/Batch-193/react-vite-typescript/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "tailwindcss": "^4.1.8",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
