--- a/Batch-194/react-vite-typescript/package.json
+++ b/Batch-194/react-vite-typescript/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11",
     "yup": "^1.6.1"
   },
