--- a/Batch-194/react-vite-typescript/package.json
+++ b/Batch-194/react-vite-typescript/package.json
@@ -22,7 +22,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
