--- a/Batch-195/react-ts-vite/package.json
+++ b/Batch-195/react-ts-vite/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.11",
+    "antd": "^6.0.0",
     "axios": "^1.13.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
