--- a/Batch-195/react-ts-vite/package.json
+++ b/Batch-195/react-ts-vite/package.json
@@ -19,6 +19,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-router": "^7.9.6",
     "tailwindcss": "^4.1.14",
     "yup": "^1.7.1"
   },
