--- a/Batch-195/react-ts-vite/package.json
+++ b/Batch-195/react-ts-vite/package.json
@@ -22,7 +22,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.9.6",
     "tailwindcss": "^4.1.14",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
