--- a/Batch-196/react-ts/package.json
+++ b/Batch-196/react-ts/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
+    "numeral": "^2.0.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
